setup(basic): add typescript

--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
   "description": "A typescript-based node project starter template",
   "main": "index.js",
   "author": "Waheed Afolabi <waheed.remote247@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "typescript": "^3.8.3"
+  }
 }
