--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Waheed Afolabi <waheed.remote247@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/node": "^13.9.0",
     "typescript": "^3.8.3"
   }
 }
