--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
   "main": "index.js",
   "author": "Waheed Afolabi <waheed.remote247@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "start:dev": "nodemon"
+  },
   "devDependencies": {
     "@types/node": "^13.9.0",
+    "nodemon": "^2.0.2",
+    "ts-node": "^8.6.2",
     "typescript": "^3.8.3"
   }
 }
