--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "author": "Waheed Afolabi <waheed.remote247@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start:dev": "nodemon"
+    "start:dev": "nodemon",
+    "build": "rimraf ./build && tsc",
+    "start": "npm run build && node build/index.js"
   },
   "devDependencies": {
     "@types/node": "^13.9.0",
     "nodemon": "^2.0.2",
+    "rimraf": "^3.0.2",
     "ts-node": "^8.6.2",
     "typescript": "^3.8.3"
   }
