--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "start:dev": "nodemon",
     "build": "rimraf ./build && tsc",
-    "start": "npm run build && node build/index.js"
+    "start": "npm run build && node build/index.js",
+    "lint": "eslint . --ext .ts"
   },
   "devDependencies": {
     "@types/node": "^13.9.0",
@@ -16,7 +17,7 @@
     "@typescript-eslint/parser": "^2.23.0",
     "eslint": "^6.8.0",
     "nodemon": "^2.0.2",
-    "rimraf": "^3.0.2",touch
+    "rimraf": "^3.0.2",
     "ts-node": "^8.6.2",
     "typescript": "^3.8.3"
   }
