--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@typescript-eslint/eslint-plugin": "^2.23.0",
     "@typescript-eslint/parser": "^2.23.0",
     "eslint": "^6.8.0",
+    "eslint-plugin-no-loops": "^0.3.0",
     "nodemon": "^2.0.2",
     "rimraf": "^3.0.2",
     "ts-node": "^8.6.2",
