setup(basic): add no-loop rule

--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,8 @@
   "root": true,
   "parser": "@typescript-eslint/parser",
   "plugins": [
-    "@typescript-eslint"
+    "@typescript-eslint",
+    "no-loops"
   ],
   "extends": [
     "eslint:recommended",
@@ -10,6 +11,7 @@
     "plugin:@typescript-eslint/recommended"
   ],
   "rules": {
-    "no-console": 0
+    "no-console": 1,
+    "no-loops/no-loops": 2
   }
 }
