--- a/.eslintrc
+++ b/.eslintrc
@@ -2,16 +2,17 @@
   "root": true,
   "parser": "@typescript-eslint/parser",
   "plugins": [
-    "@typescript-eslint",
-    "no-loops"
+    "@typescript-eslint"
+    // "no-loops"
   ],
   "extends": [
-    "eslint:recommended",
-    "plugin:@typescript-eslint/eslint-recommended",
-    "plugin:@typescript-eslint/recommended"
+    // "eslint:recommended",
+    // "plugin:@typescript-eslint/eslint-recommended",
+    // "plugin:@typescript-eslint/recommended"
+    "plugin:shopify/esnext"
   ],
   "rules": {
-    "no-console": 1,
-    "no-loops/no-loops": 2
+    "no-console": 1
+    // "no-loops/no-loops": 2
   }
 }
