--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-plugin-no-loops": "^0.3.0",
     "eslint-plugin-shopify": "^35.0.0",
     "nodemon": "^2.0.2",
+    "prettier": "^1.19.1",
     "rimraf": "^3.0.2",
     "ts-node": "^8.6.2",
     "typescript": "^3.8.3"
