setup(basic): add script to call prettier

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "rimraf ./build && tsc",
     "start": "npm run build && node build/index.js",
     "lint": "eslint . --ext .ts",
-    "lint:fix": "eslint . --ext .ts --fix"
+    "lint:fix": "eslint . --ext .ts --fix",
+    "prettier-format": "prettier --config .prettierrc src/**/*.ts --write"
   },
   "devDependencies": {
     "@types/node": "^13.9.0",
