--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start": "npm run build && node build/index.js",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
-    "prettier-format": "prettier --config .prettierrc src/**/*.ts --write"
+    "prettier-format": "prettier --config .prettierrc src/**/*.ts --write",
+    "prettier-watch": "onchange src/**/*.ts -- prettier --write {{changed}}"
   },
   "devDependencies": {
     "@types/node": "^13.9.0",
@@ -25,5 +26,8 @@
     "rimraf": "^3.0.2",
     "ts-node": "^8.6.2",
     "typescript": "^3.8.3"
+  },
+  "dependencies": {
+    "onchange": "^6.1.0"
   }
 }
