--- a/.eslintrc
+++ b/.eslintrc
@@ -2,17 +2,20 @@
   "root": true,
   "parser": "@typescript-eslint/parser",
   "plugins": [
-    "@typescript-eslint"
-    // "no-loops"
+    "@typescript-eslint",
+    "prettier",
+    "no-loops"
   ],
   "extends": [
-    // "eslint:recommended",
-    // "plugin:@typescript-eslint/eslint-recommended",
-    // "plugin:@typescript-eslint/recommended"
-    "plugin:shopify/esnext"
+    "eslint:recommended",
+    "plugin:@typescript-eslint/eslint-recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:shopify/esnext",
+    "prettier"
   ],
   "rules": {
-    "no-console": 1
-    // "no-loops/no-loops": 2
+    "no-console": 1, // means warning
+    "no-loops/no-loops": 2, // means error
+    "prettier/prettier": 2
   }
 }
