--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "@typescript-eslint/eslint-plugin": "^2.23.0",
     "@typescript-eslint/parser": "^2.23.0",
     "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-no-loops": "^0.3.0",
+    "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-shopify": "^35.0.0",
+    "husky": "^4.2.3",
     "nodemon": "^2.0.2",
     "prettier": "^1.19.1",
     "rimraf": "^3.0.2",
@@ -29,5 +32,10 @@
   },
   "dependencies": {
     "onchange": "^6.1.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn prettier-format && yarn lint"
+    }
   }
 }
